<resources>
    <string name="app_name">Rango Amigo</string>

    <string name="urlRangoAmigo">http://www.anjodaguardaeventos.com.br/rangoamigo/</string>

    <string name="login_txtAjuda">Para acessar, por favor, informe seu número de telefone com código de área.</string>
    <string name="login_hintDDD">DDD</string>
    <string name="login_hintTelefone">Telefone</string>
    <string name="login_btnAvancar">Avançar</string>
    <string name="login_btnNovo">Novo Acesso</string>
    <string name="login_btnAcessar">Acessar</string>

    <string name="evento_sem_registros">Você não tem eventos cadastrados.</string>
    <string name="convite_sem_registros">Você não tem convites cadastrados.</string>
    <string name="contato_sem_registros">Você não tem contatos cadastrados.</string>
    <string name="contato_sem_email">Email não cadastrado</string>

    <string name="acesso_txtAjudaSms">Enviamos um código por SMS para o telefone informado.</string>
    <string name="acesso_txtAjudaAcesso">Por favor, informe esse código para prosseguir.</string>
    <string name="acesso_hintPIN">PIN</string>

    <string name="perfil_hintNome">Nome</string>
    <string name="perfil_hintEmail">Email</string>
    <string name="perfil_btnSalvar">Salvar</string>

    <string name="localEvento_btnLocal">Ver Local</string>
    <string name="localEvento_btnRota">Acessar Rota</string>

    <string name="cadEvento_btnVoltar">Voltar</string>
    <string name="cadEvento_btnAvancar">Avançar</string>

    <string name="cadEvento_hintNomeEvento">Nome Evento</string>
    <string name="cadEvento_hintData">Data e Hora</string>
    <string name="cadEvento_hintEndereco">Endereço</string>
    <string name="cadEvento_hintNomeLocal">Nome do Local</string>
    <string name="cadEvento_btnVerMapa">Ver Mapa</string>


    <!-- Detalhe Evento-->
    <string name="detalheEvento_titulo">Detalhes do Evento</string>

    <!-- Cabecalho Gaveta -->
    <string name="drawer_header_text">Rango Amigo</string>

    <!-- Menu Gaveta Tela Acesos -->
    <string name="nav_item_cadastro">Novo Acesso</string>
    <string name="nav_item_login">Acessar</string>
    <string name="nav_item_sair">Fechar</string>


    <!-- Menu Gaveta Tela Eventos -->
    <string name="nav_item_eventos">Seus Eventos</string>
    <string name="nav_item_convites">Seus Convites</string>
    <string name="nav_item_contatos">Seus Contatos</string>
    <string name="nav_item_perfil">Editar Perfil</string>
    <string name="nav_item_logout">Sair</string>
    <string name="nav_item_fechar">Fechar</string>

    <string name="menu_item_convidar">Enviar Convite</string>
    <string name="menu_item_sincronizar">Sincronizar</string>
    <string name="menu_item_atualizar">Atualizar</string>

    <string name="menu_item_aceitar">Aceitar Convite</string>
    <string name="menu_item_recusar">Recusar Convite</string>
    <string name="menu_item_sugerir">Sugerir Data</string>

    <string name="menu_item_editar">Editar Evento</string>
    <string name="menu_item_apagar">Excluir Evento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
