<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_eventos"
            android:title="@string/nav_item_eventos" />
        <item
            android:id="@+id/navigation_item_convites"
            android:title="@string/nav_item_convites" />
        <item
            android:id="@+id/navigation_item_contatos"
            android:title="@string/nav_item_contatos" />
        <item
            android:id="@+id/navigation_item_perfil"
            android:checkable="false"
            android:title="@string/nav_item_perfil" />
        <item
            android:id="@+id/navigation_item_sair"
            android:checkable="false"
            android:title="@string/nav_item_logout"
            />
        <item
            android:id="@+id/navigation_item_fechar"
            android:checkable="false"
            android:title="@string/nav_item_fechar"
            />
    </group>
</menu>