<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context="com.example.guilherme.rangoamigo.activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/formTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAjuda"
            style="@style/texotTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:text="@string/login_txtAjuda"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtDDD"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtAjuda"
            android:layout_below="@+id/txtAjuda"
            app:hintTextAppearance="@style/floatLabel"
            android:nextFocusRight="@+id/txtTelefone">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:hint="@string/login_hintDDD" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtTelefone"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtAjuda"
            android:layout_below="@+id/txtAjuda"
            app:hintTextAppearance="@style/floatLabel"
            android:nextFocusRight="@+id/btnAvancar"
            android:layout_marginStart="10dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="9"
                android:hint="@string/login_hintTelefone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAvancar"
            android:onClick="avancarLogin"
            style="@style/botaoPadrao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTelefone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login_btnAvancar" />

        <Button
            android:id="@+id/btnNovo"
            android:onClick="avancarCadastro"
            style="@style/botaoPadrao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAvancar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/login_btnNovo" />

    </RelativeLayout>

</LinearLayout>
