<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guilherme.rangoamigo.fragments.EtapaDoisFragment">

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <android.support.design.widget.TextInputLayout
         android:id="@+id/txtNomeLocal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/floatLabel"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="60dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">

         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="1dp"
             android:hint="@string/cadEvento_hintNomeLocal"
             android:inputType="text"
             android:maxLength="50" />
     </android.support.design.widget.TextInputLayout>

     <android.support.design.widget.TextInputLayout
         android:id="@+id/txtEndereco"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:hintTextAppearance="@style/floatLabel"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/txtNomeLocal"
         android:layout_centerHorizontal="true">

         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="1dp"
             android:hint="@string/cadEvento_hintEndereco"
             android:inputType="text"
             android:maxLength="40" />
     </android.support.design.widget.TextInputLayout>

     <Button
         android:id="@+id/btnVerMapa"
         style="@style/botaoPadrao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/cadEvento_btnVerMapa"
         android:layout_below="@+id/txtEndereco"
         android:layout_centerHorizontal="true" />


 </RelativeLayout>

</FrameLayout>
